Bug 332700 - Editing sequence messages auto increments message counter
Summary: Editing sequence messages auto increments message counter
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-27 16:53 UTC by Ralf Habacker
Modified: 2014-04-02 06:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-03-27 16:53:28 UTC
On sequence diagrams there is a an auto increment sequence number feature, which increment the sequence number on each message creation. Unfortunally this happens also on editing already created messages.

Reproducible: Always

Steps to Reproduce:
1. open umbrello 
2. create sequence diagram
3. enable auto increment with diagram properties 
4. add two object widgets and two messages
5. edit the first message and save
Actual Results:  
The sequence number of the first message is incremented

Expected Results:  
Editing messages should not increment the related sequence number
Comment 1 Ralf Habacker 2014-03-27 16:55:35 UTC
Git commit b984750a058837e3a92824eb4b94567234233dc6 by Ralf Habacker.
Committed on 26/03/2014 at 17:14.
Pushed by habacker into branch 'master'.

Avoid auto incrementing sequence number on editing sequence messages.

M  +3    -1    umbrello/dialogs/selectopdlg.cpp
M  +1    -1    umbrello/dialogs/selectopdlg.h
M  +12   -9    umbrello/widgets/floatingtextwidget.cpp
M  +1    -1    umbrello/widgets/floatingtextwidget.h

http://commits.kde.org/umbrello/b984750a058837e3a92824eb4b94567234233dc6
Comment 2 Ralf Habacker 2014-03-27 16:58:13 UTC
Git commit fa199a30805eba208bcfc49af726e53c4a22160a by Ralf Habacker.
Committed on 26/03/2014 at 17:14.
Pushed by habacker into branch 'KDE/4.13'.

Avoid auto incrementing sequence number on editing sequence messages.
FIXED-IN:4.13.0
(cherry picked from commit b984750a058837e3a92824eb4b94567234233dc6)

M  +3    -1    umbrello/dialogs/selectopdlg.cpp
M  +1    -1    umbrello/dialogs/selectopdlg.h
M  +12   -9    umbrello/widgets/floatingtextwidget.cpp
M  +1    -1    umbrello/widgets/floatingtextwidget.h

http://commits.kde.org/umbrello/fa199a30805eba208bcfc49af726e53c4a22160a
Comment 3 Ralf Habacker 2014-03-27 17:11:40 UTC
Git commit 8f2b76f3e8b7936279a55e5c06c1e21bda21f09e by Ralf Habacker.
Committed on 26/03/2014 at 17:14.
Pushed by habacker into branch 'KDE/4.12'.

Avoid auto incrementing sequence number on editing sequence messages.
FIXED-IN:4.12.4
(cherry picked from commit b984750a058837e3a92824eb4b94567234233dc6)

M  +3    -1    umbrello/dialogs/selectopdlg.cpp
M  +1    -1    umbrello/dialogs/selectopdlg.h
M  +12   -9    umbrello/widgets/floatingtextwidget.cpp
M  +1    -1    umbrello/widgets/floatingtextwidget.h

http://commits.kde.org/umbrello/8f2b76f3e8b7936279a55e5c06c1e21bda21f09e