Avoid auto incrementing sequence number on editing sequence messages.

BUG:332700
FIXED-IN:4.12.4
(cherry picked from commit b984750a058837e3a92824eb4b94567234233dc6)